src/test/ui/error-codes/E0423.stderr
error: expected type, found `1`
  --> $DIR/E0423.rs:12:39
   |
LL |     if let S { x: _x, y: 2 } = S { x: 1, y: 2 } { println!("Ok"); }
   |                                       ^ expecting a type here because of type ascription

error: expected expression, found `==`
  --> $DIR/E0423.rs:15:13
   |
LL |     if T {} == T {} { println!("Ok"); }
   |             ^^ expected expression

error: expected type, found `0`
  --> $DIR/E0423.rs:21:39
   |
LL |     for _ in std::ops::Range { start: 0, end: 10 } {}
   |                                       ^ expecting a type here because of type ascription

error[E0423]: expected function, found struct `Foo`
  --> $DIR/E0423.rs:4:13
   |
LL |     let f = Foo(); //~ ERROR E0423
   |             ^^^
   |             |
   |             did you mean `Foo { /* fields */ }`?
   |             help: a function with a similar name exists: `foo`

error[E0423]: expected value, found struct `S`
  --> $DIR/E0423.rs:12:32
   |
LL |     if let S { x: _x, y: 2 } = S { x: 1, y: 2 } { println!("Ok"); }
   |                                ^---------------
   |                                |
   |                                help: surround the struct literal with parenthesis: `(S { x: 1, y: 2 })`

error[E0423]: expected value, found struct `T`
  --> $DIR/E0423.rs:15:8
   |
LL |     if T {} == T {} { println!("Ok"); }
   |        ^---
   |        |
   |        help: surround the struct literal with parenthesis: `(T {})`

error[E0423]: expected value, found struct `std::ops::Range`
  --> $DIR/E0423.rs:21:14
   |
LL |     for _ in std::ops::Range { start: 0, end: 10 } {}
   |              ^^^^^^^^^^^^^^^----------------------
   |              |
   |              help: surround the struct literal with parenthesis: `(std::ops::Range { start: 0, end: 10 })`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0423`.
